; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_22587.c_addr_initialize.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_22587.c_addr_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i64 }

@AF_INET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addr_initialize(%struct.sockaddr_in* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.sockaddr_in*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.sockaddr_in* %0, %struct.sockaddr_in** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* @AF_INET, align 4
  %8 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %9 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @htons(i32 %10)
  %12 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %13 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %16 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i64 %14, i64* %17, align 8
  ret void
}

declare dso_local i32 @htons(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
